# manga-ocr

./: Cargo.toml  README.md
src/: clipboard.rs  config.rs  hf.rs  main.rs  model.rs
