[package]
name = "manga-ocr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
hf-hub = "0.4.3"
image = "0.25.6"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
ort = "2.0.0-rc.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.2"

[features]
huggingface-tests = []
